[gd_scene load_steps=6 format=2]

[ext_resource path="res://rooms/Room.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://rooms/testing/screenshake/screenshake_playground.gd" type="Script" id=3]
[ext_resource path="res://ui/themes/default_theme.tres" type="Theme" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 90 )

[node name="ScreenshakePlayground" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Platforms" parent="TileMaps" index="2"]
tile_data = PoolIntArray( 0, 28, 0, 1, 28, 0, 2, 28, 0, 3, 28, 0, 4, 28, 0, 5, 28, 0, 6, 28, 0, 7, 28, 0, 8, 28, 0, 9, 28, 0, 10, 28, 0, 11, 28, 0, 12, 28, 0, 13, 28, 0, 14, 28, 0, 15, 28, 0, 16, 28, 0, 17, 28, 0, 18, 28, 0, 19, 28, 0, 65536, 28, 0, 65555, 28, 0, 131072, 28, 0, 131091, 28, 0, 196608, 28, 0, 196627, 28, 0, 262144, 28, 0, 262163, 28, 0, 327680, 28, 0, 327699, 28, 0, 393216, 28, 0, 393235, 28, 0, 458752, 28, 0, 458760, 2, 0, 458761, 9, 0, 458762, 7, 0, 458763, 3, 0, 458771, 28, 0, 524288, 28, 0, 524307, 28, 0, 589824, 28, 0, 589843, 28, 0, 655360, 28, 0, 655361, 25, 0, 655362, 25, 0, 655363, 25, 0, 655364, 25, 0, 655365, 25, 0, 655366, 25, 0, 655367, 25, 0, 655368, 25, 0, 655369, 25, 0, 655370, 25, 0, 655371, 25, 0, 655372, 25, 0, 655373, 25, 0, 655374, 25, 0, 655375, 25, 0, 655376, 25, 0, 655377, 25, 0, 655378, 25, 0, 655379, 28, 0, 720896, 28, 0, 720897, 28, 0, 720898, 28, 0, 720899, 28, 0, 720900, 28, 0, 720901, 28, 0, 720902, 28, 0, 720903, 28, 0, 720904, 28, 0, 720905, 28, 0, 720906, 28, 0, 720907, 28, 0, 720908, 28, 0, 720909, 28, 0, 720910, 28, 0, 720911, 28, 0, 720912, 28, 0, 720913, 28, 0, 720914, 28, 0, 720915, 28, 0 )

[node name="CollisionShape2D" parent="RoomBoundaries" index="0"]
position = Vector2( 160, 90 )
shape = SubResource( 1 )

[node name="Player" parent="." index="9" instance=ExtResource( 2 )]
position = Vector2( 160, 112 )
starting_room_path = NodePath("..")

[node name="OptionButtons" type="HBoxContainer" parent="." index="10"]
margin_top = 24.0
margin_right = 320.0
margin_bottom = 48.0
theme = ExtResource( 4 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DurationOptions" type="OptionButton" parent="OptionButtons" index="0"]
margin_left = 142.0
margin_right = 158.0
margin_bottom = 24.0

[node name="AmplitudeOptions" type="OptionButton" parent="OptionButtons" index="1"]
margin_left = 162.0
margin_right = 178.0
margin_bottom = 24.0

[editable path="TileMaps"]
